feat: signer's adminPort /status endpoint changed to grpc call
Refs: XRDDEV-2673